# SnapState

./: .gitignore  API Test Key.txt  Cloudflare API Keys.txt  Dockerfile  Dockerfile.txt  JWT Secret.txt  PyPI-Recovery-Codes-timbassler-2026-04-13T01_01_51.487808.txt  Pypi API token.txt  README.md  docker-compose.yml  email-retry.json  email-retry2.json  email-test.json  gmail-signup.json  journey-cp1.json  journey-cp2.json  live-signup.json  nixpacks.toml  npmjs token.txt  package.json  prod-signup.json  resend-test.json  server.json
.mcp/: server.json
dashboard/: package-lock.json  package.json  vite.config.js
dashboard/src/: app.jsx  index.html
docs/: package-lock.json  package.json  vite.config.js
docs/src/: app.jsx  index.html
mcp-server/: README.md  package-lock.json  package.json
mcp-server/src/: index.js  tools.js  transport.js
sdk/: README.md  package.json
sdk-python/: README.md  first-cp.json  newuser.json  pyproject.toml
sdk-python/examples/: basic_agent.py  multi_agent.py
sdk-python/snapstate-test/: journey-agent.json  package-lock.json  package.json  test-agent.js
sdk-python/src/checkpoint_sdk/: __init__.py  client.py  errors.py  types.py
sdk-python/src/checkpoint_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sdk-python/src/snapstate_sdk/: __init__.py  client.py  errors.py  types.py
sdk-python/src/snapstate_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk-python/tests/: test_client.py
sdk/examples/: basic-agent.js  mcp-agent.js  multi-agent.js
server/: .env.example  package-lock.json  package.json
(+82 files in other folders)
